[project]
name = "web-project-microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "mvrduk",email = "mardukh.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
